<resources>
    <string name="app_name">Running Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to the running tracker app. Please provide the information below</string>
    <string name="weight_text">Weight</string>
    <string name="your_name_text">Full name</string>
    <string name="proceed_text">Proceed</string>
    <string name="runs_text">Runs</string>
    <string name="statistics_text">Statistics</string>
    <string name="settings_text">Settings</string>
    <string name="start_text">Start</string>
    <string name="resume_text">Resume</string>
    <string name="finish_run_text">Finish Run</string>
    <string name="initial_timer">00:00:00</string>
    <string name="pause_text">Pause</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="save_changes_text">Save Changes</string>

    <string-array name="sort_items">
        <item>Date</item>
        <item>Distance</item>
        <item>Time</item>
        <item>Calories</item>
        <item>Avg Speed</item>
    </string-array>
</resources>