<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SetupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setup_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/welcome_tv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/welcome_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/welcome_tv"
            app:layout_constraintTop_toBottomOf="@id/welcome_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/your_name_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:suffixText="Kg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_weight_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/weight_text"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/setup_proceed_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/proceed_text"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/textInputLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/welcome_tv"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
