<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="false"
    app:behavior_peekHeight="24dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <data>
        <variable
            name="viewModel"
            type="com.example.runningtracker.viewmodel.BottomDialogViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="bottom_dialog_fragment"
        android:background="@drawable/bottom_dialog_shape"
        tools:context=".ui.BottomDialogFragment">

        <View
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:background="@drawable/bottom_dialog_icon"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/stop_watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{viewModel.stopWatchValue}"
            android:textColor="@color/purple_700"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/stop_watch_resume_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#BCBABA"
            android:text="@string/resume_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/stop_watch_finish_run"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stop_watch" />

        <Button
            android:id="@+id/stop_watch_finish_run"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/finish_run_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stop_watch" />

        <Button
            android:id="@+id/stop_watch_start_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="50dp"
            android:text="@string/start_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stop_watch" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
